# xchain

./: .gitignore  README  README.md  _config.yml  cctools-806.patch  msg.cpp  msg.m
cctools-806/: Makefile.in  configure  configure.ac
cctools-806-patched/: Makefile  config.status  configure  configure.ac
cctools-806-patched/RelNotes/: Private_CompilerTools.html
cctools-806-patched/ar/: Makefile  archive.c  archive.h
cctools-806-patched/as/: Makefile
cctools-806-patched/as/arm/: Makefile
cctools-806-patched/as/i386/: Makefile
cctools-806-patched/as/ppc/: Makefile
cctools-806-patched/as/ppc64/: Makefile
cctools-806-patched/as/torture/: archv2.s  cruft.s
cctools-806-patched/as/x86_64/: Makefile
cctools-806-patched/include/: Makefile  Makefile.in  config.h  config.h.in  notes
cctools-806-patched/include/foreign/arm/: endian.h
cctools-806-patched/include/foreign/mach/: error.h  kern_return.h  mach_init.h  mach_traps.h
cctools-806-patched/include/foreign/mach/machine/: vm_types.h
cctools-806-patched/include/i386/: _types.h
cctools-806-patched/include/mach/ppc/: _structs.h  thread_status.h
cctools-806-patched/include/mach/x86_64/: task.h
cctools-806-patched/include/stuff/: arch.h  bytesex.h
cctools-806-patched/ld/: Makefile  pass1.c
cctools-806-patched/libmacho/: Makefile
cctools-806-patched/libstuff/: Makefile  apple_version.c  execute.c  notes  ofile.c
cctools-806-patched/man/: Makefile  Makefile.in
cctools-806-patched/misc/: Makefile  Makefile.in  libtool.c  pagestuff.c  redo_prebinding.c
cctools-806-patched/otool/: Makefile  main.c  ofile_print.h
cctools-806/ar/: Makefile.arch.in  Makefile.in  misc.c
cctools-806/as/: Makefile.arch.in  Makefile.in
cctools-806/as/torture/: inst.s  (+7 more)
cctools-806/ld/: Makefile.in  ld.h  pass2.c
cctools-806/libstuff/: Makefile.in  execute.c
cctools-806/misc/: notes  ranlib.c
cctools-806/otool/: notes  ofile_print.c  print_objc.c
cmake-ios-example/: CMakeLists.txt  create-package.sh
cmake-ios-example/CMake Example.app/: Info.plist
cmake-ios-example/CMake Example.app/English.lproj/: InfoPlist.strings  Localizable.strings
cmake-ios-example/Classes/: CMAppDelegate.h  CMAppDelegate.m  CMMainViewController.h  CMMainViewController.m  MyView.h  MyView.m  main.m
gcc-5490/: ChangeLog.apple  GNUmakefile  build_gcc  build_libgcc  driverdriver.c  ltcf-c.sh  ltcf-cxx.sh  ltcf-gcj.sh  ltconfig
gcc-5490/gcc/: ChangeLog  ChangeLog.apple  builtin-types.def  builtins.c  builtins.def  c-common.c  c-common.h  c-cppbuiltin.c  c-decl.c  c-opts.c  c-parse.in  c-typeck.c  c.opt  cfglayout.c  config.gcc  dwarf2.h  dwarf2out.c  final.c  fold-const.c  gcc.c  gcc.h  global.c  ifcvt.c  opts.c  output.h  stmt.c  version.c
gcc-5490/patches/: README  gcc-32bit.patch  gcc-64bit.patch  gcc-cflags.patch  gcc-tooldir.patch
gcc-5666.3/: ChangeLog.apple  Makefile.in  build_gcc  build_libgcc  configure  configure.in  driverdriver.c
gcc-5666.3/config/: mh-x86-darwin
gcc-5666.3/gcc/: ChangeLog.apple  Makefile.in  builtins.def  c-common.c  c-common.h  c-decl.c  c-lex.c  c-parser.c  c-pch.c  c-typeck.c  config.gcc  dwarf2out.c  expmed.c  flow.c  fold-const.c  local-alloc.c  target-def.h  target.h  version.c
odcctools-9.2-ld/: .gitignore  configure  configure.ac
odcctools-9.2-ld-only-required/: Makefile.in  configure  configure.ac
odcctools-9.2-ld-only-required/ar/: archive.c  archive.h  contents.c
odcctools-9.2-ld-only-required/as/: app.c  as.c  as.h  driver.c  expr.c  fixes.h  frags.h  layout.c  messages.c  read.c  sections.c  struc-symbol.h  symbols.c
odcctools-9.2-ld-only-required/ld/: 4byte_literals.c  4byte_literals.h  arm_reloc.h  coalesced_sections.c  coalesced_sections.h  cstring_literals.c  cstring_literals.h  dylibs.c  dylibs.h  generic_reloc.h  hppa_reloc.h  i860_reloc.c  i860_reloc.h  indirect_sections.c  layout.c  ld.c  ld.h  literal_pointers.c  mod_sections.h  pass1.h  pass2.c  ppc_reloc.h  rld.c  sections.c  sections.h  sparc_reloc.h  symbols.c  symbols.h
odcctools-9.2-ld-only-required/libmacho/: Makefile.in  hppa_swap.c  i386_swap.c  i860_swap.c  m68k_swap.c
odcctools-9.2-ld-only-required/libstuff/: Makefile.in  checkout.c  dylib_table.c  macosx_deployment_target.c  ofile.c  ofile_get_word.c  reloc.c  writeout.c
odcctools-9.2-ld-only-required/man/: libtool.1
odcctools-9.2-ld-only-required/misc/: Makefile.in  cmpdylib.c  install_name_tool.c  libtool.c  lipo.c  pagestuff.c  redo_prebinding.c  segedit.c
odcctools-9.2-ld-only-required/otool/: arm_disasm.c  arm_disasm.h  main.c  ofile_print.c  print_objc2_32bit.c
odcctools-9.2-ld-only-required/patches/: odcctools_lipo.patch
odcctools-9.2-ld-only-required/valwrap/: valwrap.c
odcctools-9.2-ld/ar/: Makefile  Makefile.in  ar.c
odcctools-9.2-ld/as/: Makefile  arm.c  atof-ieee.c  md.h  read.c.orig  read.h  symbols.h  write_object.c
odcctools-9.2-ld/include/: Makefile  Makefile.in  config.h  config.h.in
odcctools-9.2-ld/ld/: 8byte_literals.c  8byte_literals.h  Makefile  Makefile.in  arm_reloc.c  fvmlibs.c  fvmlibs.h  generic_reloc.c  hppa_reloc.c  indirect_sections.h  layout.h  literal_pointers.h  live_refs.h  m88k_reloc.c  m88k_reloc.h  mod_sections.c  notes  objects.h  pass1.c  pass2.h  ppc_reloc.c  sets.c  sets.h  sparc_reloc.c  specs.c  specs.h  uuid.c
odcctools-9.2-ld/ld64/: ChangeLog  Makefile  Makefile.in.orig  Makefile.in.rej
odcctools-9.2-ld/libmacho/: Makefile  dynamic_profile_obj  m88k_swap.c  ppc_swap.c  sparc_swap.c
odcctools-9.2-ld/libstuff/: Makefile  SymLoc.c  arch.c  arch_usage.c  best_arch.c  bytesex.c  emulated.c  execute.c  get_arch_from_host.c  seg_addr_table.c  swap_headers.c
odcctools-9.2-ld/man/: Makefile  ld.1
odcctools-9.2-ld/misc/: Makefile  Makefile.in  checksyms.c  dylib_pcsampler.c  indr.c  libtool.c.orig  nm.c  strings.c  strip.c
odcctools-9.2-ld/otool/: Makefile  Makefile.in  notes  ofile_print.h  otool.h  print_objc.c  print_objc2_64bit.c
patches/: cctools-806-nondarwin.patch  gcc-5666.3-cflags.patch  gcc-5666.3-tooldir.patch  llvmgcc42-2335.15-mempcpy.patch  llvmgcc42-2335.15-redundant.patch
(+485 files in other folders)
